Bug 722626: Implement DOMRequest object. r=mrbkap